--- a/explore.ipynb
+++ b/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "from torch import Tensor\n",
     "import re\n",
     "\n",
-    "from gradient_sheets import get_tensor_sheet, get_grads, percent_grads, get_children, find_edges"
+    "from gradient_sheets import get_tensor_sheet, get_grads, percent_grads\n",
+    "from sheet_graph import get_children, find_edges"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +37,15 @@
     "tensor_sheet = get_tensor_sheet(formula_sheet)\n",
     "\n",
     "grads = get_grads(tensor_sheet, 'I7', leaf_only=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "formula_sheet"
    ]
   },
   {
@@ -175,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
